cmake_minimum_required(VERSION 2.8)
project(Mask)
find_package(OpenCV REQUIRED)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_C++11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_C++0X)
if(COMPILER_SUPPORTS_C++11)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_C++0X)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
	message(STATUS "Compiler <${CMAKE_CXX_COMPILER}> Does not support C++11")
endif()

add_executable(Mask Mask.cpp)
target_link_libraries(Mask ${OpenCV_LIBS})
